--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,31 @@
-name: Build APK
+# This is a GitHub Actions workflow file.
+
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'
 
-      - name: Grant permission
-        run: chmod +x gradlew
+    - name: Install dependencies
+      run: |
+        cd KlinikAPK
+        npm install
 
-      - name: Build APK
-        run: ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+    - name: Run tests
+      run: |
+        cd KlinikAPK
+        npm test
