Update GitHub Actions workflow for Android APK build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
-# This is a GitHub Actions workflow file.
-
-name: CI
+name: Android CI
 
 on:
   push:
@@ -10,22 +8,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
 
-    - name: Install dependencies
-      run: |
-        cd KlinikAPK
-        npm install
-
-    - name: Run tests
-      run: |
-        cd KlinikAPK
-        npm test
+      - name: Build APK
+        run: |
+          cd KlinikAPK
+          ./gradlew build
