--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,26 @@
-# Update this file to include the chmod +x command for gradlew
+name: Android CI
 
-# This is the content of the main.yml file with the necessary update
+on:
+  push:
+    branches:
+      - main
 
-# Other yaml contents may remain unchanged
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-- name: Grant execute permission for gradlew
-  run: chmod +x gradlew
-- name: Build
-  run: ./gradlew build
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+
+      - name: Grant execute permission to gradlew
+        run: chmod +x KlinikAPK/gradlew
+
+      - name: Build APK
+        run: |
+          cd KlinikAPK
+          ./gradlew build
